src/ffmpeg.zig

pub extern fn av_int_list_length_for_size(elsize: c_uint, list: ?*const c_void, term: u64) c_uint;
pub extern fn av_fopen_utf8(path: [*c]const u8, mode: [*c]const u8) ?*FILE;
pub extern fn av_get_time_base_q() AVRational;
pub extern fn av_fourcc_make_string(buf: [*c]u8, fourcc: u32) [*c]u8;
pub const enum_AVSampleFormat = extern enum(c_int) {
    AV_SAMPLE_FMT_NONE = -1,
    AV_SAMPLE_FMT_U8 = 0,
    AV_SAMPLE_FMT_S16 = 1,
    AV_SAMPLE_FMT_S32 = 2,
    AV_SAMPLE_FMT_FLT = 3,
    AV_SAMPLE_FMT_DBL = 4,
    AV_SAMPLE_FMT_U8P = 5,
    AV_SAMPLE_FMT_S16P = 6,
    AV_SAMPLE_FMT_S32P = 7,
    AV_SAMPLE_FMT_FLTP = 8,
    AV_SAMPLE_FMT_DBLP = 9,
    AV_SAMPLE_FMT_S64 = 10,
    AV_SAMPLE_FMT_S64P = 11,
    AV_SAMPLE_FMT_NB = 12,
    _,
};
pub const AV_SAMPLE_FMT_NONE = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_NONE);
pub const AV_SAMPLE_FMT_U8 = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_U8);
pub const AV_SAMPLE_FMT_S16 = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S16);
pub const AV_SAMPLE_FMT_S32 = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S32);
pub const AV_SAMPLE_FMT_FLT = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_FLT);
pub const AV_SAMPLE_FMT_DBL = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_DBL);
pub const AV_SAMPLE_FMT_U8P = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_U8P);
pub const AV_SAMPLE_FMT_S16P = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S16P);
pub const AV_SAMPLE_FMT_S32P = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S32P);
pub const AV_SAMPLE_FMT_FLTP = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_FLTP);
pub const AV_SAMPLE_FMT_DBLP = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_DBLP);
pub const AV_SAMPLE_FMT_S64 = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S64);
pub const AV_SAMPLE_FMT_S64P = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_S64P);
pub const AV_SAMPLE_FMT_NB = @enumToInt(enum_AVSampleFormat.AV_SAMPLE_FMT_NB);
pub extern fn av_get_sample_fmt_name(sample_fmt: enum_AVSampleFormat) [*c]const u8;
pub extern fn av_get_sample_fmt(name: [*c]const u8) enum_AVSampleFormat;
pub extern fn av_get_alt_sample_fmt(sample_fmt: enum_AVSampleFormat, planar: c_int) enum_AVSampleFormat;
pub extern fn av_get_packed_sample_fmt(sample_fmt: enum_AVSampleFormat) enum_AVSampleFormat;
pub extern fn av_get_planar_sample_fmt(sample_fmt: enum_AVSampleFormat) enum_AVSampleFormat;
pub extern fn av_get_sample_fmt_string(buf: [*c]u8, buf_size: c_int, sample_fmt: enum_AVSampleFormat) [*c]u8;
pub extern fn av_get_bytes_per_sample(sample_fmt: enum_AVSampleFormat) c_int;
pub extern fn av_sample_fmt_is_planar(sample_fmt: enum_AVSampleFormat) c_int;
pub extern fn av_samples_get_buffer_size(linesize: [*c]c_int, nb_channels: c_int, nb_samples: c_int, sample_fmt: enum_AVSampleFormat, @"align": c_int) c_int;
pub extern fn av_samples_fill_arrays(audio_data: [*c][*c]u8, linesize: [*c]c_int, buf: [*c]const u8, nb_channels: c_int, nb_samples: c_int, sample_fmt: enum_AVSampleFormat, @"align": c_int) c_int;
pub extern fn av_samples_alloc(audio_data: [*c][*c]u8, linesize: [*c]c_int, nb_channels: c_int, nb_samples: c_int, sample_fmt: enum_AVSampleFormat, @"align": c_int) c_int;
pub extern fn av_samples_alloc_array_and_samples(audio_data: [*c][*c][*c]u8, linesize: [*c]c_int, nb_channels: c_int, nb_samples: c_int, sample_fmt: enum_AVSampleFormat, @"align": c_int) c_int;
pub extern fn av_samples_copy(dst: [*c][*c]u8, src: [*c]const [*c]u8, dst_offset: c_int, src_offset: c_int, nb_samples: c_int, nb_channels: c_int, sample_fmt: enum_AVSampleFormat) c_int;
pub extern fn av_samples_set_silence(audio_data: [*c][*c]u8, offset: c_int, nb_samples: c_int, nb_channels: c_int, sample_fmt: enum_AVSampleFormat) c_int;
pub const struct_AVBuffer = opaque {};
pub const AVBuffer = struct_AVBuffer;
pub const struct_AVBufferRef = extern struct {
    buffer: ?*AVBuffer,
    data: [*c]u8,
    size: c_int,
};
pub const AVBufferRef = struct_AVBufferRef;
pub extern fn av_buffer_alloc(size: c_int) [*c]AVBufferRef;
pub extern fn av_buffer_allocz(size: c_int) [*c]AVBufferRef;
pub extern fn av_buffer_create(data: [*c]u8, size: c_int, free: ?fn (?*c_void, [*c]u8) callconv(.C) void, @"opaque": ?*c_void, flags: c_int) [*c]AVBufferRef;
pub extern fn av_buffer_default_free(@"opaque": ?*c_void, data: [*c]u8) void;
pub extern fn av_buffer_ref(buf: [*c]AVBufferRef) [*c]AVBufferRef;
pub extern fn av_buffer_unref(buf: [*c][*c]AVBufferRef) void;
pub extern fn av_buffer_is_writable(buf: [*c]const AVBufferRef) c_int;
pub extern fn av_buffer_get_opaque(buf: [*c]const AVBufferRef) ?*c_void;
pub extern fn av_buffer_get_ref_count(buf: [*c]const AVBufferRef) c_int;
pub extern fn av_buffer_make_writable(buf: [*c][*c]AVBufferRef) c_int;
pub extern fn av_buffer_realloc(buf: [*c][*c]AVBufferRef, size: c_int) c_int;
pub extern fn av_buffer_replace(dst: [*c][*c]AVBufferRef, src: [*c]AVBufferRef) c_int;
pub const struct_AVBufferPool = opaque {};
pub const AVBufferPool = struct_AVBufferPool;
pub extern fn av_buffer_pool_init(size: c_int, alloc: ?fn (c_int) callconv(.C) [*c]AVBufferRef) ?*AVBufferPool;
pub extern fn av_buffer_pool_init2(size: c_int, @"opaque": ?*c_void, alloc: ?fn (?*c_void, c_int) callconv(.C) [*c]AVBufferRef, pool_free: ?fn (?*c_void) callconv(.C) void) ?*AVBufferPool;
pub extern fn av_buffer_pool_uninit(pool: [*c]?*AVBufferPool) void;
pub extern fn av_buffer_pool_get(pool: ?*AVBufferPool) [*c]AVBufferRef;
pub extern fn av_buffer_pool_buffer_get_opaque(ref: [*c]AVBufferRef) ?*c_void;
pub extern fn av_get_cpu_flags() c_int;
pub extern fn av_force_cpu_flags(flags: c_int) void;
pub extern fn av_set_cpu_flags_mask(mask: c_int) void;
pub extern fn av_parse_cpu_flags(s: [*c]const u8) c_int;
pub extern fn av_parse_cpu_caps(flags: [*c]c_uint, s: [*c]const u8) c_int;
pub extern fn av_cpu_count() c_int;
pub extern fn av_cpu_max_align() usize;
pub const enum_AVMatrixEncoding = extern enum(c_int) {
    AV_MATRIX_ENCODING_NONE,
    AV_MATRIX_ENCODING_DOLBY,
    AV_MATRIX_ENCODING_DPLII,
    AV_MATRIX_ENCODING_DPLIIX,
    AV_MATRIX_ENCODING_DPLIIZ,
    AV_MATRIX_ENCODING_DOLBYEX,
    AV_MATRIX_ENCODING_DOLBYHEADPHONE,
    AV_MATRIX_ENCODING_NB,
    _,
};
pub const AV_MATRIX_ENCODING_NONE = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_NONE);
pub const AV_MATRIX_ENCODING_DOLBY = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DOLBY);
pub const AV_MATRIX_ENCODING_DPLII = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DPLII);
pub const AV_MATRIX_ENCODING_DPLIIX = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DPLIIX);
pub const AV_MATRIX_ENCODING_DPLIIZ = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DPLIIZ);
pub const AV_MATRIX_ENCODING_DOLBYEX = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DOLBYEX);
pub const AV_MATRIX_ENCODING_DOLBYHEADPHONE = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_DOLBYHEADPHONE);
pub const AV_MATRIX_ENCODING_NB = @enumToInt(enum_AVMatrixEncoding.AV_MATRIX_ENCODING_NB);
pub extern fn av_get_channel_layout(name: [*c]const u8) u64;
pub extern fn av_get_extended_channel_layout(name: [*c]const u8, channel_layout: [*c]u64, nb_channels: [*c]c_int) c_int;
pub extern fn av_get_channel_layout_string(buf: [*c]u8, buf_size: c_int, nb_channels: c_int, channel_layout: u64) void;
pub const struct_AVBPrint = opaque {};
pub extern fn av_bprint_channel_layout(bp: ?*struct_AVBPrint, nb_channels: c_int, channel_layout: u64) void;
pub extern fn av_get_channel_layout_nb_channels(channel_layout: u64) c_int;
pub extern fn av_get_default_channel_layout(nb_channels: c_int) i64;
pub extern fn av_get_channel_layout_channel_index(channel_layout: u64, channel: u64) c_int;
pub extern fn av_channel_layout_extract_channel(channel_layout: u64, index: c_int) u64;
pub extern fn av_get_channel_name(channel: u64) [*c]const u8;
pub extern fn av_get_channel_description(channel: u64) [*c]const u8;
pub extern fn av_get_standard_channel_layout(index: c_uint, layout: [*c]u64, name: [*c][*c]const u8) c_int;
pub const struct_AVDictionaryEntry = extern struct {
    key: [*c]u8,
    value: [*c]u8,
};
pub const AVDictionaryEntry = struct_AVDictionaryEntry;
pub const struct_AVDictionary = opaque {};
pub const AVDictionary = struct_AVDictionary;
pub extern fn av_dict_get(m: ?*const AVDictionary, key: [*c]const u8, prev: [*c]const AVDictionaryEntry, flags: c_int) [*c]AVDictionaryEntry;
pub extern fn av_dict_count(m: ?*const AVDictionary) c_int;
pub extern fn av_dict_set(pm: [*c]?*AVDictionary, key: [*c]const u8, value: [*c]const u8, flags: c_int) c_int;
pub extern fn av_dict_set_int(pm: [*c]?*AVDictionary, key: [*c]const u8, value: i64, flags: c_int) c_int;
pub extern fn av_dict_parse_string(pm: [*c]?*AVDictionary, str: [*c]const u8, key_val_sep: [*c]const u8, pairs_sep: [*c]const u8, flags: c_int) c_int;
pub extern fn av_dict_copy(dst: [*c]?*AVDictionary, src: ?*const AVDictionary, flags: c_int) c_int;
pub extern fn av_dict_free(m: [*c]?*AVDictionary) void;
pub extern fn av_dict_get_string(m: ?*const AVDictionary, buffer: [*c][*c]u8, key_val_sep: u8, pairs_sep: u8) c_int;
pub const enum_AVFrameSideDataType = extern enum(c_int) {
    AV_FRAME_DATA_PANSCAN,
    AV_FRAME_DATA_A53_CC,
    AV_FRAME_DATA_STEREO3D,
    AV_FRAME_DATA_MATRIXENCODING,
    AV_FRAME_DATA_DOWNMIX_INFO,
    AV_FRAME_DATA_REPLAYGAIN,
    AV_FRAME_DATA_DISPLAYMATRIX,
    AV_FRAME_DATA_AFD,
    AV_FRAME_DATA_MOTION_VECTORS,
    AV_FRAME_DATA_SKIP_SAMPLES,
    AV_FRAME_DATA_AUDIO_SERVICE_TYPE,
    AV_FRAME_DATA_MASTERING_DISPLAY_METADATA,
    AV_FRAME_DATA_GOP_TIMECODE,
    AV_FRAME_DATA_SPHERICAL,
    AV_FRAME_DATA_CONTENT_LIGHT_LEVEL,
    AV_FRAME_DATA_ICC_PROFILE,
    AV_FRAME_DATA_QP_TABLE_PROPERTIES,
    AV_FRAME_DATA_QP_TABLE_DATA,
    AV_FRAME_DATA_S12M_TIMECODE,
    AV_FRAME_DATA_DYNAMIC_HDR_PLUS,
    AV_FRAME_DATA_REGIONS_OF_INTEREST,
    AV_FRAME_DATA_VIDEO_ENC_PARAMS,
    AV_FRAME_DATA_SEI_UNREGISTERED,
    AV_FRAME_DATA_FILM_GRAIN_PARAMS,
    _,
};
pub const AV_FRAME_DATA_PANSCAN = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_PANSCAN);
pub const AV_FRAME_DATA_A53_CC = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_A53_CC);
pub const AV_FRAME_DATA_STEREO3D = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_STEREO3D);
pub const AV_FRAME_DATA_MATRIXENCODING = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_MATRIXENCODING);
pub const AV_FRAME_DATA_DOWNMIX_INFO = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_DOWNMIX_INFO);
pub const AV_FRAME_DATA_REPLAYGAIN = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_REPLAYGAIN);
pub const AV_FRAME_DATA_DISPLAYMATRIX = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_DISPLAYMATRIX);
pub const AV_FRAME_DATA_AFD = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_AFD);
pub const AV_FRAME_DATA_MOTION_VECTORS = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_MOTION_VECTORS);
pub const AV_FRAME_DATA_SKIP_SAMPLES = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_SKIP_SAMPLES);
pub const AV_FRAME_DATA_AUDIO_SERVICE_TYPE = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_AUDIO_SERVICE_TYPE);
pub const AV_FRAME_DATA_MASTERING_DISPLAY_METADATA = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_MASTERING_DISPLAY_METADATA);
pub const AV_FRAME_DATA_GOP_TIMECODE = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_GOP_TIMECODE);
pub const AV_FRAME_DATA_SPHERICAL = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_SPHERICAL);
pub const AV_FRAME_DATA_CONTENT_LIGHT_LEVEL = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_CONTENT_LIGHT_LEVEL);
pub const AV_FRAME_DATA_ICC_PROFILE = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_ICC_PROFILE);
pub const AV_FRAME_DATA_QP_TABLE_PROPERTIES = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_QP_TABLE_PROPERTIES);
pub const AV_FRAME_DATA_QP_TABLE_DATA = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_QP_TABLE_DATA);
pub const AV_FRAME_DATA_S12M_TIMECODE = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_S12M_TIMECODE);
pub const AV_FRAME_DATA_DYNAMIC_HDR_PLUS = @enumToInt(enum_AVFrameSideDataType.AV_FRAME_DATA_DYNAMIC_HDR_PLUS);
